addition of overflow-x:clip, and temp fix to video modals (they weren't visible) and interior content updates

--- a/assets/scss/_temp/_cytemp.scss
+++ b/assets/scss/_temp/_cytemp.scss
@@ -100,7 +100,8 @@
 .admission-news-carousel.section.has-bg:after {
   --bg-image-opacity: 0.1;
 }
-.admission-news-carousel.quad-pattern.has-bg * {
+
+.admission-news-carousel.quad-pattern.has-bg  * {
   z-index: 10;
 }
 
@@ -412,4 +413,14 @@ a.logo:hover {
 
 .advancement-demo .btn-light:hover {
   background: #0e0e0e !important;
+}
+
+/* cyreview adding this class as mobile still not working */
+
+body {
+  overflow-x:clip;
+}
+
+.modal {
+  z-index: 1990!important;
 }
